crates/alba-syntax/tests/snapshots/parse__a_field_needs_an_identifier_after_the_dot.snap
---
source: crates/alba-syntax/tests/parse.rs
expression: err
---
ParseError {
    message: "expected an identifier, found end of input",
    span: Span {
        start: 12,
        end: 12,
    },
    help: None,
}
