crates/alba-syntax/tests/snapshots/parse__a_hook_with_a_repeated_beam_field_is_rejected.snap
---
source: crates/alba-syntax/tests/parse.rs
expression: err
---
ParseError {
    message: "duplicate field `beam`",
    span: Span {
        start: 25,
        end: 29,
    },
    help: None,
}
