crates/alba-syntax/tests/snapshots/parse__a_hook_with_an_unknown_field_is_rejected.snap
---
source: crates/alba-syntax/tests/parse.rs
expression: err
---
ParseError {
    message: "unknown hook field `needs`",
    span: Span {
        start: 18,
        end: 23,
    },
    help: Some(
        "a hook has exactly one field, `beam`",
    ),
}
