crates/alba-syntax/tests/snapshots/parse__a_repeated_docker_executor_option_is_rejected.snap
---
source: crates/alba-syntax/tests/parse.rs
expression: err
---
ParseError {
    message: "duplicate executor option `image`",
    span: Span {
        start: 39,
        end: 44,
    },
    help: None,
}
