crates/alba-syntax/tests/snapshots/parse__a_repeated_plugin_executor_option_is_rejected.snap
---
source: crates/alba-syntax/tests/parse.rs
expression: err
---
ParseError {
    message: "duplicate executor option `flag`",
    span: Span {
        start: 38,
        end: 42,
    },
    help: None,
}
