crates/alba-syntax/tests/snapshots/parse__executor_option_list_reports_a_malformed_entry.snap
---
source: crates/alba-syntax/tests/parse.rs
expression: err
---
ParseError {
    message: "expected a string literal, found `true`",
    span: Span {
        start: 46,
        end: 50,
    },
    help: None,
}
