crates/alba-syntax/tests/snapshots/parse__let_git.snap
---
source: crates/alba-syntax/tests/parse.rs
expression: err
---
ParseError {
    message: "`git` is reserved for the built-in git object",
    span: Span {
        start: 4,
        end: 7,
    },
    help: Some(
        "pick another name; `git.branch`, `git.sha`, `git.short_sha`, and `git.dirty` read from it",
    ),
}
